// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`PipelineCreate test initializes ok edit pipeline 1`] = `
<div>
  <div
    class="StyledProps--font StyledProps--main container StyledProps--padding-small"
  >
    <button
      class="bp3-button bp3-minimal StyledProps--font Button--button Button--iconOnly StyledProps--main closeModal"
      type="button"
    >
      <span
        class="bp3-icon bp3-icon-cross StyledProps--main"
        icon="cross"
      >
        <svg
          data-icon="cross"
          height="16"
          viewBox="0 0 16 16"
          width="16"
        >
          <desc>
            cross
          </desc>
          <path
            d="M9.41 8l3.29-3.29c.19-.18.3-.43.3-.71a1.003 1.003 0 00-1.71-.71L8 6.59l-3.29-3.3a1.003 1.003 0 00-1.42 1.42L6.59 8 3.3 11.29c-.19.18-.3.43-.3.71a1.003 1.003 0 001.71.71L8 9.41l3.29 3.29c.18.19.43.3.71.3a1.003 1.003 0 00.71-1.71L9.41 8z"
            fill-rule="evenodd"
          />
        </svg>
      </span>
    </button>
    <h2
      class="StyledProps--font StyledProps--font-h2 StyledProps--main heading"
      level="2"
    >
      Edit Pipeline
    </h2>
    <div
      class="StyledProps--font StyledProps--main layout StyledProps--padding-xsmall"
    >
      <div>
        <div
          class="OverlaySpinner--overlaySpinner"
        >
          <form
            class="FormikForm--main"
          >
            <div>
              <div
                class="formInput"
              >
                <div
                  class="InputWithIdentifier--txtNameContainer"
                >
                  <div
                    class="Layout--horizontal StyledProps--main InputWithIdentifier--txtIdContainer"
                  >
                    <p
                      class="StyledProps--font StyledProps--main"
                    >
                      ID
                      :
                    </p>
                    <span
                      class="InputWithIdentifier--idInput"
                      contenteditable="false"
                      disabled=""
                    >
                      test
                    </span>
                  </div>
                  <div
                    class="bp3-form-group"
                    data-id="name-0"
                  >
                    <label
                      class="bp3-label"
                      for="name"
                    >
                      Pipeline Name*
                       
                      <span
                        class="bp3-text-muted"
                      />
                    </label>
                    <div
                      class="bp3-form-content"
                    >
                      <div
                        class="bp3-input-group"
                      >
                        <input
                          autocomplete="off"
                          class="bp3-input"
                          name="name"
                          placeholder="Name"
                          type="text"
                          value="pipeline"
                        />
                      </div>
                    </div>
                  </div>
                </div>
                <div
                  class="collapseDiv"
                >
                  <div
                    class="Collapse--main"
                  >
                    <div
                      class="StyledProps--font StyledProps--main CollapseHeader--main Collapse--header"
                    >
                      <div
                        class="StyledProps--font StyledProps--main CollapseHeader--leftSection"
                      >
                        <span
                          class="bp3-icon bp3-icon-small-minus StyledProps--main StyledProps--color StyledProps--color-grey400"
                          icon="small-minus"
                        >
                          <svg
                            data-icon="small-minus"
                            height="10"
                            viewBox="0 0 16 16"
                            width="10"
                          >
                            <desc>
                              small-minus
                            </desc>
                            <path
                              d="M11 7H5c-.55 0-1 .45-1 1s.45 1 1 1h6c.55 0 1-.45 1-1s-.45-1-1-1z"
                              fill-rule="evenodd"
                            />
                          </svg>
                        </span>
                        <p
                          class="StyledProps--font StyledProps--main CollapseHeader--title"
                        >
                          Description
                        </p>
                      </div>
                      <div
                        class="StyledProps--font StyledProps--main"
                      />
                    </div>
                    <div
                      class="Collapse--collapse"
                    >
                      <div
                        class="bp3-collapse collapse"
                        style="height: auto; overflow-y: visible; transition: none;"
                      >
                        <div
                          aria-hidden="false"
                          class="bp3-collapse-body"
                          style="transform: translateY(0); transition: none;"
                        >
                          <div
                            class="bp3-form-group"
                            data-id="description-1"
                          >
                            <div
                              class="bp3-form-content"
                            >
                              <textarea
                                autocomplete="off"
                                class="bp3-input bp3-fill"
                                name="description"
                              >
                                desc
                              </textarea>
                            </div>
                          </div>
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
                <div
                  class="collapseDiv"
                >
                  <div
                    class="Collapse--main"
                  >
                    <div
                      class="StyledProps--font StyledProps--main CollapseHeader--main Collapse--header"
                    >
                      <div
                        class="StyledProps--font StyledProps--main CollapseHeader--leftSection"
                      >
                        <span
                          class="bp3-icon bp3-icon-small-plus StyledProps--main StyledProps--color StyledProps--color-grey400"
                          icon="small-plus"
                        >
                          <svg
                            data-icon="small-plus"
                            height="10"
                            viewBox="0 0 16 16"
                            width="10"
                          >
                            <desc>
                              small-plus
                            </desc>
                            <path
                              d="M11 7H9V5c0-.55-.45-1-1-1s-1 .45-1 1v2H5c-.55 0-1 .45-1 1s.45 1 1 1h2v2c0 .55.45 1 1 1s1-.45 1-1V9h2c.55 0 1-.45 1-1s-.45-1-1-1z"
                              fill-rule="evenodd"
                            />
                          </svg>
                        </span>
                        <p
                          class="StyledProps--font StyledProps--main CollapseHeader--title"
                        >
                          Tags
                        </p>
                      </div>
                      <div
                        class="StyledProps--font StyledProps--main"
                      />
                    </div>
                    <div
                      class="Collapse--collapse"
                    >
                      <div
                        class="bp3-collapse collapse"
                      >
                        <div
                          aria-hidden="false"
                          class="bp3-collapse-body"
                          style="transform: translateY(-undefinedpx);"
                        />
                      </div>
                    </div>
                  </div>
                </div>
              </div>
              <button
                class="bp3-button StyledProps--font Button--button StyledProps--main startBtn StyledProps--intent-primary"
                type="submit"
              >
                <span
                  class="bp3-button-text"
                >
                  Save
                </span>
              </button>
            </div>
          </form>
        </div>
      </div>
      <div
        class="Layout--vertical Layout--layout-spacing-xsmall StyledProps--main Carousel--carousel StyledProps--padding-small"
      >
        <div
          class="Carousel--carouselView"
        >
          <div
            class="Carousel--carouselItem Carousel--active"
          >
            <div
              class="helpImages"
            >
              <img
                src="test-file-stub"
              />
              <div>
                <p
                  class="StyledProps--font StyledProps--main StyledProps--font-weight-bold StyledProps--padding-bottom-small"
                >
                  Pipeline Concepts
                </p>
                <p
                  class="StyledProps--font StyledProps--main"
                >
                  A pipeline allows you to automate your continuous deployment processes that includes deployment, testing, provisioning, approvals, verifications and rollout
                </p>
              </div>
            </div>
          </div>
          <div
            class="Carousel--carouselItem Carousel--carouselItemNext"
          >
            <div
              class="helpImages"
            >
              <img
                src="test-file-stub"
              />
              <div>
                <p
                  class="StyledProps--font StyledProps--main StyledProps--font-weight-bold StyledProps--padding-bottom-small"
                >
                  Pipeline Concepts
                </p>
                <p
                  class="StyledProps--font StyledProps--main"
                >
                  A pipeline allows you to automate your continuous deployment processes that includes deployment, testing, provisioning, approvals, verifications and rollout
                </p>
              </div>
            </div>
          </div>
          <div
            class="Carousel--carouselItem"
          >
            <div
              class="helpImages"
            >
              <img
                src="test-file-stub"
              />
              <div>
                <p
                  class="StyledProps--font StyledProps--main StyledProps--font-weight-bold StyledProps--padding-bottom-small"
                >
                  Pipeline Concepts
                </p>
                <p
                  class="StyledProps--font StyledProps--main"
                >
                  A pipeline allows you to automate your continuous deployment processes that includes deployment, testing, provisioning, approvals, verifications and rollout
                </p>
              </div>
            </div>
          </div>
          <div
            class="Carousel--carouselRight"
          >
            <div>
              <span
                class="bp3-icon StyledProps--main StyledProps--color StyledProps--color-white"
              >
                <svg
                  height="20"
                  viewBox="0 0 8 14"
                  width="20"
                >
                  <path
                    d="M7.7 6.3l-6-6C1.5.1 1.3 0 1 0 .4 0 0 .4 0 1c0 .3.1.5.3.7L5.6 7 .3 12.3c-.2.2-.3.4-.3.7 0 .6.4 1 1 1 .3 0 .5-.1.7-.3l6-6c.2-.2.3-.4.3-.7s-.1-.5-.3-.7z"
                    fill="#4d5969"
                  />
                </svg>
              </span>
            </div>
          </div>
        </div>
        <div
          class="Carousel--carouselIndicators"
        >
          <span
            class="Carousel--indicator Carousel--active"
          />
          <span
            class="Carousel--indicator"
          />
          <span
            class="Carousel--indicator"
          />
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`PipelineCreate test initializes ok new pipeline 1`] = `
<div>
  <div
    class="StyledProps--font StyledProps--main container StyledProps--padding-small"
  >
    <button
      class="bp3-button bp3-minimal StyledProps--font Button--button Button--iconOnly StyledProps--main closeModal"
      type="button"
    >
      <span
        class="bp3-icon bp3-icon-cross StyledProps--main"
        icon="cross"
      >
        <svg
          data-icon="cross"
          height="16"
          viewBox="0 0 16 16"
          width="16"
        >
          <desc>
            cross
          </desc>
          <path
            d="M9.41 8l3.29-3.29c.19-.18.3-.43.3-.71a1.003 1.003 0 00-1.71-.71L8 6.59l-3.29-3.3a1.003 1.003 0 00-1.42 1.42L6.59 8 3.3 11.29c-.19.18-.3.43-.3.71a1.003 1.003 0 001.71.71L8 9.41l3.29 3.29c.18.19.43.3.71.3a1.003 1.003 0 00.71-1.71L9.41 8z"
            fill-rule="evenodd"
          />
        </svg>
      </span>
    </button>
    <h2
      class="StyledProps--font StyledProps--font-h2 StyledProps--main heading"
      level="2"
    >
      Welcome to the Pipeline Studio
    </h2>
    <div
      class="StyledProps--font StyledProps--main layout StyledProps--padding-xsmall"
    >
      <div>
        <p
          class="StyledProps--font StyledProps--main helpText"
        >
          Let’s get you started by giving your pipeline a name
        </p>
        <div
          class="OverlaySpinner--overlaySpinner"
        >
          <form
            class="FormikForm--main"
          >
            <div>
              <div
                class="formInput"
              >
                <div
                  class="InputWithIdentifier--txtNameContainer"
                >
                  <div
                    class="Layout--horizontal StyledProps--main InputWithIdentifier--txtIdContainer"
                  >
                    <p
                      class="StyledProps--font StyledProps--main"
                    >
                      ID
                      :
                    </p>
                    <span
                      class="InputWithIdentifier--idInput"
                      contenteditable="true"
                    />
                    <span
                      class="bp3-icon bp3-icon-edit StyledProps--main"
                      icon="edit"
                      style="vertical-align: middle;"
                    >
                      <svg
                        data-icon="edit"
                        height="12"
                        viewBox="0 0 16 16"
                        width="12"
                      >
                        <desc>
                          edit
                        </desc>
                        <path
                          d="M3.25 10.26l2.47 2.47 6.69-6.69-2.46-2.48-6.7 6.7zM.99 14.99l3.86-1.39-2.46-2.44-1.4 3.83zm12.25-14c-.48 0-.92.2-1.24.51l-1.44 1.44 2.47 2.47 1.44-1.44c.32-.32.51-.75.51-1.24.01-.95-.77-1.74-1.74-1.74z"
                          fill-rule="evenodd"
                        />
                      </svg>
                    </span>
                  </div>
                  <div
                    class="bp3-form-group"
                    data-id="name-0"
                  >
                    <label
                      class="bp3-label"
                      for="name"
                    >
                      Pipeline Name*
                       
                      <span
                        class="bp3-text-muted"
                      />
                    </label>
                    <div
                      class="bp3-form-content"
                    >
                      <div
                        class="bp3-input-group"
                      >
                        <input
                          autocomplete="off"
                          class="bp3-input"
                          name="name"
                          placeholder="Name"
                          type="text"
                          value="pipeline"
                        />
                      </div>
                    </div>
                  </div>
                </div>
                <div
                  class="collapseDiv"
                >
                  <div
                    class="Collapse--main"
                  >
                    <div
                      class="StyledProps--font StyledProps--main CollapseHeader--main Collapse--header"
                    >
                      <div
                        class="StyledProps--font StyledProps--main CollapseHeader--leftSection"
                      >
                        <span
                          class="bp3-icon bp3-icon-small-minus StyledProps--main StyledProps--color StyledProps--color-grey400"
                          icon="small-minus"
                        >
                          <svg
                            data-icon="small-minus"
                            height="10"
                            viewBox="0 0 16 16"
                            width="10"
                          >
                            <desc>
                              small-minus
                            </desc>
                            <path
                              d="M11 7H5c-.55 0-1 .45-1 1s.45 1 1 1h6c.55 0 1-.45 1-1s-.45-1-1-1z"
                              fill-rule="evenodd"
                            />
                          </svg>
                        </span>
                        <p
                          class="StyledProps--font StyledProps--main CollapseHeader--title"
                        >
                          Description
                        </p>
                      </div>
                      <div
                        class="StyledProps--font StyledProps--main"
                      />
                    </div>
                    <div
                      class="Collapse--collapse"
                    >
                      <div
                        class="bp3-collapse collapse"
                        style="height: auto; overflow-y: visible; transition: none;"
                      >
                        <div
                          aria-hidden="false"
                          class="bp3-collapse-body"
                          style="transform: translateY(0); transition: none;"
                        >
                          <div
                            class="bp3-form-group"
                            data-id="description-1"
                          >
                            <div
                              class="bp3-form-content"
                            >
                              <textarea
                                autocomplete="off"
                                class="bp3-input bp3-fill"
                                name="description"
                              >
                                desc
                              </textarea>
                            </div>
                          </div>
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
                <div
                  class="collapseDiv"
                >
                  <div
                    class="Collapse--main"
                  >
                    <div
                      class="StyledProps--font StyledProps--main CollapseHeader--main Collapse--header"
                    >
                      <div
                        class="StyledProps--font StyledProps--main CollapseHeader--leftSection"
                      >
                        <span
                          class="bp3-icon bp3-icon-small-plus StyledProps--main StyledProps--color StyledProps--color-grey400"
                          icon="small-plus"
                        >
                          <svg
                            data-icon="small-plus"
                            height="10"
                            viewBox="0 0 16 16"
                            width="10"
                          >
                            <desc>
                              small-plus
                            </desc>
                            <path
                              d="M11 7H9V5c0-.55-.45-1-1-1s-1 .45-1 1v2H5c-.55 0-1 .45-1 1s.45 1 1 1h2v2c0 .55.45 1 1 1s1-.45 1-1V9h2c.55 0 1-.45 1-1s-.45-1-1-1z"
                              fill-rule="evenodd"
                            />
                          </svg>
                        </span>
                        <p
                          class="StyledProps--font StyledProps--main CollapseHeader--title"
                        >
                          Tags
                        </p>
                      </div>
                      <div
                        class="StyledProps--font StyledProps--main"
                      />
                    </div>
                    <div
                      class="Collapse--collapse"
                    >
                      <div
                        class="bp3-collapse collapse"
                      >
                        <div
                          aria-hidden="false"
                          class="bp3-collapse-body"
                          style="transform: translateY(-undefinedpx);"
                        />
                      </div>
                    </div>
                  </div>
                </div>
              </div>
              <button
                class="bp3-button StyledProps--font Button--button StyledProps--main startBtn StyledProps--intent-primary"
                type="submit"
              >
                <span
                  class="bp3-button-text"
                >
                  Start
                </span>
              </button>
            </div>
          </form>
        </div>
      </div>
      <div
        class="Layout--vertical Layout--layout-spacing-xsmall StyledProps--main Carousel--carousel StyledProps--padding-small"
      >
        <div
          class="Carousel--carouselView"
        >
          <div
            class="Carousel--carouselItem Carousel--active"
          >
            <div
              class="helpImages"
            >
              <img
                src="test-file-stub"
              />
              <div>
                <p
                  class="StyledProps--font StyledProps--main StyledProps--font-weight-bold StyledProps--padding-bottom-small"
                >
                  Pipeline Concepts
                </p>
                <p
                  class="StyledProps--font StyledProps--main"
                >
                  A pipeline allows you to automate your continuous deployment processes that includes deployment, testing, provisioning, approvals, verifications and rollout
                </p>
              </div>
            </div>
          </div>
          <div
            class="Carousel--carouselItem Carousel--carouselItemNext"
          >
            <div
              class="helpImages"
            >
              <img
                src="test-file-stub"
              />
              <div>
                <p
                  class="StyledProps--font StyledProps--main StyledProps--font-weight-bold StyledProps--padding-bottom-small"
                >
                  Pipeline Concepts
                </p>
                <p
                  class="StyledProps--font StyledProps--main"
                >
                  A pipeline allows you to automate your continuous deployment processes that includes deployment, testing, provisioning, approvals, verifications and rollout
                </p>
              </div>
            </div>
          </div>
          <div
            class="Carousel--carouselItem"
          >
            <div
              class="helpImages"
            >
              <img
                src="test-file-stub"
              />
              <div>
                <p
                  class="StyledProps--font StyledProps--main StyledProps--font-weight-bold StyledProps--padding-bottom-small"
                >
                  Pipeline Concepts
                </p>
                <p
                  class="StyledProps--font StyledProps--main"
                >
                  A pipeline allows you to automate your continuous deployment processes that includes deployment, testing, provisioning, approvals, verifications and rollout
                </p>
              </div>
            </div>
          </div>
          <div
            class="Carousel--carouselRight"
          >
            <div>
              <span
                class="bp3-icon StyledProps--main StyledProps--color StyledProps--color-white"
              >
                <svg
                  height="20"
                  viewBox="0 0 8 14"
                  width="20"
                >
                  <path
                    d="M7.7 6.3l-6-6C1.5.1 1.3 0 1 0 .4 0 0 .4 0 1c0 .3.1.5.3.7L5.6 7 .3 12.3c-.2.2-.3.4-.3.7 0 .6.4 1 1 1 .3 0 .5-.1.7-.3l6-6c.2-.2.3-.4.3-.7s-.1-.5-.3-.7z"
                    fill="#4d5969"
                  />
                </svg>
              </span>
            </div>
          </div>
        </div>
        <div
          class="Carousel--carouselIndicators"
        >
          <span
            class="Carousel--indicator Carousel--active"
          />
          <span
            class="Carousel--indicator"
          />
          <span
            class="Carousel--indicator"
          />
        </div>
      </div>
    </div>
  </div>
</div>
`;
